--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Web Bridge RT Messaging</title>
+  <title>Web Bridge RT Listening</title>
   <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdn.jsdelivr.net; connect-src *; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' 'unsafe-inline';">
   <meta http-equiv="Access-Control-Allow-Origin" content="*">
   <script src="https://cdn.jsdelivr.net/npm/backendless@7/dist/backendless.min.js"></script>
 </head>
 <body>
-  <h2>Messaging Bridge Active</h2>
+  <h2>Listening Bridge Active</h2>
 
   <script>
     // Backendless configuration
     const APP_ID = "9561383D-4BC2-F4F1-FF73-B529BFE77000";
     const API_KEY_SUBSCRIBE = "BEE4A193-7ADC-419B-9EB4-202FDA99ACC6";
-    const API_KEY_PUBLISH = "4CD13851-2D6E-44B6-BB66-5437FCBF0B8C";
 
     // Diagnostic endpoint
     window.testBridge = function() {
@@ -22,7 +21,7 @@
       return "BridgeReady";
     };
 
-    // Process messages
+    // Process listen messages
     window.processMessage = async function(message) {
       console.log("📥 Processing message:", message);
       let data;
@@ -40,82 +39,53 @@
         return { status: "error", message: e.message };
       }
 
-      if (!data || !data.mode || !data.token) {
-        console.warn("❌ Missing required data: mode or token", data);
-        return { status: "error", message: "Missing mode or token" };
+      if (!data || !data.mode || !data.token || !data.channelName) {
+        console.warn("❌ Missing required data: mode, token, or channelName", data);
+        return { status: "error", message: "Missing required data" };
       }
 
-      const mode = data.mode;
+      if (data.mode !== "listen") {
+        console.warn("❌ Only listen mode supported", data.mode);
+        return { status: "error", message: `Invalid mode: ${data.mode}` };
+      }
+
       const token = data.token;
+      const channelName = data.channelName;
 
-      if (mode === "listen") {
-        const channelName = data.channelName;
-        if (!channelName) {
-          console.warn("❌ Missing channelName for listen mode");
-          return { status: "error", message: "Missing channelName" };
-        }
+      Backendless.initApp(APP_ID, API_KEY_SUBSCRIBE);
+      Backendless.UserService.setCurrentUserToken(token);
 
-        Backendless.initApp(APP_ID, API_KEY_SUBSCRIBE);
-        Backendless.UserService.setCurrentUserToken(token);
-
-        try {
-          const channel = Backendless.Messaging.subscribe(channelName);
-          channel.addMessageListener((message) => {
-            const msgText = typeof message === "object" ? JSON.stringify(message) : message;
-            console.log("📤 Sending to WebView:", msgText);
-            try {
-              if (window.ReactNativeWebView?.postMessage) {
-                window.ReactNativeWebView.postMessage(msgText);
-              }
-              if (window.Android?.postMessage) {
-                window.Android.postMessage(msgText);
-              }
-              window.postMessage(msgText, "*");
-            } catch (e) {
-              console.error("❌ Failed to post message to WebView:", e.message);
+      try {
+        const channel = Backendless.Messaging.subscribe(channelName);
+        channel.addMessageListener((message) => {
+          const msgText = typeof message === "object" ? JSON.stringify(message) : message;
+          console.log("📤 Sending to WebView:", msgText);
+          try {
+            if (window.ReactNativeWebView?.postMessage) {
+              window.ReactNativeWebView.postMessage(msgText);
             }
-          });
-          console.log("✅ Listening on channel:", channelName);
-          return { status: "success", message: `Listening on ${channelName}` };
-        } catch (e) {
-          console.error("❌ Subscription error:", e.message);
-          return { status: "error", message: e.message };
-        }
-      } else if (mode === "publish") {
-        let channelName;
-        try {
-          const parsedToken = JSON.parse(atob(token.split('.')[1]));
-          console.log("🔍 Parsed token payload:", JSON.stringify(parsedToken));
-          const objectId = parsedToken['objectId'] || parsedToken['user-id'] || parsedToken['userId'] || parsedToken['id'] || parsedToken['sub'];
-          if (!objectId) throw new Error("No valid user identifier");
-          channelName = objectId.substring(0, 6);
-          console.log("📌 Derived channelName:", channelName);
-        } catch (e) {
-          console.error("❌ Failed to derive channel:", e.message);
-          return { status: "error", message: e.message };
-        }
-
-        Backendless.initApp(APP_ID, API_KEY_PUBLISH);
-        Backendless.UserService.setCurrentUserToken(token);
-
-        const payload = {
-          latestOb: data.latestOb || null,
-          location: data.location || null,
-          timestamp: new Date().toISOString()
-        };
-        console.log("📦 Publish payload:", JSON.stringify(payload));
-
-        try {
-          await Backendless.Messaging.publish(channelName, payload);
-          console.log("📤 Message published to", channelName);
-          return { status: "success", message: `Published to ${channelName}` };
-        } catch (e) {
-          console.error("❌ Failed to publish:", e.message);
-          return { status: "error", message: e.message };
-        }
-      } else {
-        console.warn("❌ Invalid mode:", mode);
-        return { status: "error", message: `Invalid mode: ${mode}` };
+            if (window.Android?.postMessage) {
+              window.Android.postMessage(msgText);
+            }
+            if (window.chrome?.webview?.postMessage) {
+              window.chrome.webview.postMessage(msgText);
+            }
+            if (window.webkit?.messageHandlers?.webview?.postMessage) {
+              window.webkit.messageHandlers.webview.postMessage(msgText);
+            }
+            window.postMessage(msgText, "*");
+            // Custom event fallback
+            const event = new CustomEvent("bridgeMessage", { detail: msgText });
+            document.dispatchEvent(event);
+          } catch (e) {
+            console.error("❌ Failed to post message to WebView:", e.message);
+          }
+        });
+        console.log("✅ Listening on channel:", channelName);
+        return { status: "success", message: `Listening on ${channelName}` };
+      } catch (e) {
+        console.error("❌ Subscription error:", e.message);
+        return { status: "error", message: e.message };
       }
     };
 
@@ -125,7 +95,7 @@
       window.processMessage(event.data);
     });
 
-    console.log("📡 Web Bridge ready to receive instructions from Thunkable...");
+    console.log("📡 Listening Bridge ready to receive instructions from Thunkable...");
   </script>
 </body>
 </html>
