--- a/index.html
+++ b/index.html
@@ -2,60 +2,51 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Web Bridge Listener</title>
+  <title>WebSocket RT Listening</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdn.jsdelivr.net; connect-src *; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' 'unsafe-inline';">
+  <meta http-equiv="Access-Control-Allow-Origin" content="*">
   <script src="https://cdn.jsdelivr.net/npm/backendless@7/dist/backendless.min.js"></script>
 </head>
 <body>
-  <h2>Listening Bridge Active</h2>
+  <h2>WebSocket Listening Active</h2>
 
   <script>
     const APP_ID = "9561383D-4BC2-F4F1-FF73-B529BFE77000";
-    const API_KEY = "BEE4A193-7ADC-419B-9EB4-202FDA99ACC6";
+    const API_KEY_SUBSCRIBE = "BEE4A193-7ADC-419B-9EB4-202FDA99ACC6";
 
-    // Start listening on command from Thunkable
-    window.addEventListener("message", async (event) => {
-      console.log("📩 Received message:", event.data);
-      let data;
+    window.testBridge = function() {
+      console.log("🛠️ WebSocket test: Script loaded");
+      return "WebSocketReady";
+    };
 
+    window.startListening = function(token, channelName) {
+      console.log("📡 Starting WebSocket listening:", channelName);
       try {
-        data = typeof event.data === "string" ? JSON.parse(event.data) : event.data;
-      } catch (e) {
-        console.error("❌ Failed to parse JSON:", e.message);
-        return;
-      }
-
-      const token = data.token;
-      const channelName = data.channelName;
-
-      if (!token || !channelName) {
-        console.warn("❌ Missing token or channelName");
-        return;
-      }
-
-      Backendless.initApp(APP_ID, API_KEY);
-      Backendless.UserService.setCurrentUserToken(token);
-
-      try {
+        Backendless.initApp(APP_ID, API_KEY_SUBSCRIBE);
+        Backendless.UserService.setCurrentUserToken(token);
         const channel = Backendless.Messaging.subscribe(channelName);
         channel.addMessageListener((message) => {
-          const msg = typeof message === "object" ? JSON.stringify(message) : String(message);
-          console.log("📤 Forwarding to WebView:", msg);
-
-          // ✅ Standard cross-platform WebViewer call
-          if (window.ReactNativeWebView && window.ReactNativeWebView.postMessage) {
-            window.ReactNativeWebView.postMessage(msg);
-          } else {
-            console.warn("⚠️ ReactNativeWebView.postMessage not available");
+          const msgText = typeof message === "object" ? JSON.stringify(message) : message;
+          console.log("📤 Sending to WebView:", msgText);
+          try {
+            if (window.ReactNativeWebView?.postMessage) {
+              window.ReactNativeWebView.postMessage(msgText);
+            }
+            window.postMessage(msgText, "*");
+            console.log("📤 Sent to WebView");
+          } catch (e) {
+            console.error("❌ Failed to send message:", e.message);
           }
         });
-
-        console.log("✅ Subscribed to:", channelName);
+        console.log("✅ Listening on channel:", channelName);
+        return { status: "success", message: `Listening on ${channelName}` };
       } catch (e) {
         console.error("❌ Subscription error:", e.message);
+        return { status: "error", message: e.message };
       }
-    });
+    };
 
-    console.log("📡 WebBridge ready");
+    console.log("📡 WebSocket listener ready...");
   </script>
 </body>
 </html>
